[package]
name = "bolt4rs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
log = "0.4"
env_logger = "0.10"
bolt4rs = { path = "../lib" }
anyhow = "1.0"

[[bin]]
name = "bolt4rs-server"
path = "src/main.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
