[package]
name = "bolt4rs-server"
version = "0.1.0"
edition = "2021"

[features]
unstable-serde-packstream-format = []
unstable-result-summary = ["unstable-serde-packstream-format"]
unstable-bolt-protocol-impl-v2 = [
    "unstable-serde-packstream-format",
    "unstable-result-summary",
]
default = ["unstable-bolt-protocol-impl-v2"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
log = "0.4"
env_logger = "0.10"
bolt4rs = { path = "../lib", features = ["unstable-bolt-protocol-impl-v2", "unstable-serde-packstream-format"] }
anyhow = "1.0"
kuzu = { version = "^0.8.2", features = ["arrow"] }
arrow-array = { version = "53.0.0", default-features = false }
arrow = { version = "53.0.0", default-features = false }
arrow-schema = { version = "53.0.0", default-features = false }

[[bin]]
name = "bolt4rs-server"
path = "src/main.rs"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
